@@ -1,5 +1,9 @@
 2001-05-29  Christopher Faylor  <cgf@redhat.com>
 
+	* partial-stab.h: Revert previous patch.
+
+2001-05-29  Christopher Faylor  <cgf@redhat.com>
+
 	* partial-stab.h: Consistently guard against pst being NULL.
 
 2001-05-29  Alexandre Oliva  <aoliva@redhat.com>
